<resources>
    <string name="app_name">Yummy</string>
    <string name="home">Home</string>
    <string name="favorite">Favorite</string>
    <string name="category">Category</string>
    <string name="search_icon">Search Icon</string>
    <string name="what_do_you_want_to_take_today">What would you like to eat?</string>
    <string name="popular_food">Popular Food</string>
    <string name="categories">categories</string>
    <string name="random_image">Random Image</string>
    <string name="fabicon">fabicon</string>
    <string name="categor">Category: Beef</string>
    <string name="area">Area: Palestine</string>
    <string name="instructions">Instructions</string>
</resources>